[package]
name = "gnostr_ws_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.5", features = ["tokio"], optional = true }
bytes = "1.0"
futures-channel = { version = "0.3.17", features = ["sink"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
handlebars = "6.0"
headers = "0.3.5"
http = "1.1"
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
listenfd = "1.0"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0"
multer = { version = "2.1.0", optional = true }
percent-encoding = "2.1"
pin-project = "1.0"
pretty_env_logger = "0.5"
rustls-pemfile = { version = "2.0", optional = true }
scoped-tls = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
tao = "0.29"
tokio = { version = "1.0", features = ["fs", "sync", "time", "macros", "rt-multi-thread"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"], optional = true }
tokio-stream = { version = "0.1.1", features = ["net"] }
tokio-tungstenite = { version = "0.21", optional = true }
tokio-util = { version = "0.7.1", features = ["io"] }
tower-service = "0.3"
tracing = { version = "0.1.21", default-features = false, features = ["log", "std"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = { version = "0.3.7", path = "warp" }
wry = "0.46.3"
